# homeassistant-integration-goxlr-utility

./: README.md  hacs.json  pyproject.toml
.github/workflows/: hacs.yml  hassfest.yml  labels.yml  lint.yml  pylint.yml  release.yml  ruff.yml
custom_components/goxlr_utility/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  helper.py  light.py  manifest.json  media_player.py  sensor.py
custom_components/goxlr_utility/tests/: __init__.py  conftest.py  test_config_flow.py
custom_components/goxlr_utility/translations/: pt.json
