[tool.poetry]
name = "goxlr_utility"
version = "0.0.0"
description = "GoXLR Utility integration for Home Assistant"
authors = ["Aidan Timson <contact@timmo.dev>"]
maintainers = ["Aidan Timson <contact@timmo.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/timmo001/homeassistant-integration-goxlr-utility"
repository = "https://github.com/timmo001/homeassistant-integration-goxlr-utility"
documentation = "https://github.com/timmo001/homeassistant-integration-goxlr-utility"
classifiers = [
  "Framework :: AsyncIO",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3",
]
packages = []

[tool.poetry.dependencies]
python = "^3.10"
homeassistant = "^2023.3"
goxlrutilityapi = "^1.1.3"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
hass-nabucasa = "0.67.1"
pre-commit = "3.3.1"
pre-commit-hooks = "4.4.0"
ruff = "0.0.264"
pylint = "2.17.3"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/timmo001/homeassistant-integration-goxlr-utility/issues"
Changelog = "https://github.com/timmo001/homeassistant-integration-goxlr-utility/releases"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["custom_components/goxlr_utility"]
select = ["ALL"]
ignore = [
  "ANN101", # Self... explanatory
  "ANN401", # Opiniated warning on disallowing dynamically typed expressions
  "BLE001", # Allow exception in config_flow
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "E501", # Handled by black
  "I001", # isort handles this
  "TCH002", # Move third-party import
  "TID252", # Relative imports
]

[tool.ruff.flake8-import-conventions.extend-aliases]
voluptuous = "vol"
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.helpers.issue_registry" = "ir"

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by black
# duplicate-code - unavoidable
# used-before-assignment - false positives with TYPE_CHECKING structures
disable = [
    "format",
    "duplicate-code",
    "used-before-assignment",
]
